Настройки клиентской части

--- a/B/App/ds2431.ioc
+++ b/B/App/ds2431.ioc
@@ -1,17 +1,17 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
-Dma.Request2=TIM1_CH1
+Dma.Request2=TIM1_CH2
 Dma.RequestsNb=3
-Dma.TIM1_CH1.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM1_CH1.2.Instance=DMA1_Channel2
-Dma.TIM1_CH1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM1_CH1.2.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH1.2.Mode=DMA_NORMAL
-Dma.TIM1_CH1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM1_CH1.2.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM1_CH1.2.Priority=DMA_PRIORITY_LOW
-Dma.TIM1_CH1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM1_CH2.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM1_CH2.2.Instance=DMA1_Channel3
+Dma.TIM1_CH2.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH2.2.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH2.2.Mode=DMA_NORMAL
+Dma.TIM1_CH2.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH2.2.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH2.2.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH2.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.Instance=DMA1_Channel6
 Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -50,8 +50,10 @@ Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
 Mcu.Pin10=PB8
 Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin13=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin12=VP_TIM1_VS_ControllerModeReset
+Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM1_VS_indirect_ch1
+Mcu.Pin15=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA8
@@ -60,14 +62,14 @@ Mcu.Pin6=PA12
 Mcu.Pin7=PA13
 Mcu.Pin8=PA14
 Mcu.Pin9=PB3
-Mcu.PinsNb=14
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -105,7 +107,7 @@ PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=true
+ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -156,9 +158,14 @@ RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
-SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH1.1=TIM1_CH1,TriggerSource_TI1FP1
+SH.S_TIM1_CH1.ConfNb=2
 TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-Input_Capture1_from_TI1
+TIM1.Channel-Input_Capture2_from_TI1_63=TIM_CHANNEL_2
+TIM1.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1_63,Prescaler,Period,ICPolarity_CH1
+TIM1.Period=10000
+TIM1.Prescaler=35
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
@@ -170,6 +177,10 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_ControllerModeReset.Mode=Reset Mode
+VP_TIM1_VS_ControllerModeReset.Signal=TIM1_VS_ControllerModeReset
+VP_TIM1_VS_indirect_ch1.Mode=Input_Capture2_from_TI1_63
+VP_TIM1_VS_indirect_ch1.Signal=TIM1_VS_indirect_ch1
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
