--- a/B/App/ds2431.ioc
+++ b/B/App/ds2431.ioc
@@ -1,17 +1,17 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
-Dma.Request2=TIM1_CH2
+Dma.Request2=TIM2_CH1
 Dma.RequestsNb=3
-Dma.TIM1_CH2.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM1_CH2.2.Instance=DMA1_Channel3
-Dma.TIM1_CH2.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM1_CH2.2.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH2.2.Mode=DMA_NORMAL
-Dma.TIM1_CH2.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM1_CH2.2.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM1_CH2.2.Priority=DMA_PRIORITY_LOW
-Dma.TIM1_CH2.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM2_CH1.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM2_CH1.2.Instance=DMA1_Channel5
+Dma.TIM2_CH1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM2_CH1.2.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_CH1.2.Mode=DMA_NORMAL
+Dma.TIM2_CH1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM2_CH1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_CH1.2.Priority=DMA_PRIORITY_LOW
+Dma.TIM2_CH1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.Instance=DMA1_Channel6
 Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -40,36 +40,40 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
-Mcu.IP5=USART2
-Mcu.IP6=USB
-Mcu.IP7=USB_DEVICE
-Mcu.IPNb=8
+Mcu.IP5=TIM2
+Mcu.IP6=USART2
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB8
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM1_VS_ControllerModeReset
+Mcu.Pin10=PB3
+Mcu.Pin11=PB8
+Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM1_VS_indirect_ch1
-Mcu.Pin15=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA8
-Mcu.Pin5=PA11
-Mcu.Pin6=PA12
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=PB3
-Mcu.PinsNb=16
+Mcu.Pin14=VP_TIM2_VS_ControllerModeReset
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin17=VP_TIM2_VS_OPM
+Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA8
+Mcu.Pin6=PA11
+Mcu.Pin7=PA12
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -84,6 +88,9 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_ModeDefaultPP
+PA0-WKUP.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -133,7 +140,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -157,15 +164,26 @@ RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
-SH.S_TIM1_CH1.1=TIM1_CH1,TriggerSource_TI1FP1
-SH.S_TIM1_CH1.ConfNb=2
-TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM1.Channel-Input_Capture2_from_TI1_63=TIM_CHANNEL_2
-TIM1.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1_63,Prescaler,Period,ICPolarity_CH1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM_Input_1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+TIM1.ICPolarity_1=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,ICPolarity_1
 TIM1.Period=10000
 TIM1.Prescaler=35
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OCPolarity_1,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Pulse-PWM Generation1 CH1,OCMode_PWM-PWM Generation1 CH1,AutoReloadPreload
+TIM2.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM2
+TIM2.OCPolarity_1=TIM_OCPOLARITY_LOW
+TIM2.Period=200
+TIM2.Prescaler=35
+TIM2.Pulse-PWM\ Generation1\ CH1=1
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
@@ -177,10 +195,14 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM1_VS_ControllerModeReset.Mode=Reset Mode
-VP_TIM1_VS_ControllerModeReset.Signal=TIM1_VS_ControllerModeReset
-VP_TIM1_VS_indirect_ch1.Mode=Input_Capture2_from_TI1_63
-VP_TIM1_VS_indirect_ch1.Signal=TIM1_VS_indirect_ch1
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
+VP_TIM2_VS_ControllerModeReset.Mode=Reset Mode
+VP_TIM2_VS_ControllerModeReset.Signal=TIM2_VS_ControllerModeReset
+VP_TIM2_VS_OPM.Mode=OPM_bit
+VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
