--- a/B/App/ds2431.ioc
+++ b/B/App/ds2431.ioc
@@ -2,7 +2,17 @@
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
 Dma.Request2=TIM2_CH1
-Dma.RequestsNb=3
+Dma.Request3=TIM1_CH1
+Dma.RequestsNb=4
+Dma.TIM1_CH1.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM1_CH1.3.Instance=DMA1_Channel2
+Dma.TIM1_CH1.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH1.3.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH1.3.Mode=DMA_NORMAL
+Dma.TIM1_CH1.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH1.3.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH1.3.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.TIM2_CH1.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.TIM2_CH1.2.Instance=DMA1_Channel5
 Dma.TIM2_CH1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -41,38 +51,44 @@ Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM2
-Mcu.IP6=USART2
-Mcu.IP7=USB
-Mcu.IP8=USB_DEVICE
-Mcu.IPNb=9
+Mcu.IP6=TIM3
+Mcu.IP7=USART2
+Mcu.IP8=USB
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB3
-Mcu.Pin11=PB8
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM2_VS_ControllerModeReset
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin17=VP_TIM2_VS_OPM
-Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=PA14
+Mcu.Pin11=PB3
+Mcu.Pin12=PB8
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM2_VS_ControllerModeTrigger
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin18=VP_TIM2_VS_OPM
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
+Mcu.Pin20=VP_TIM3_VS_no_output1
+Mcu.Pin21=VP_TIM3_VS_OPM
+Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
-Mcu.Pin5=PA8
-Mcu.Pin6=PA11
-Mcu.Pin7=PA12
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=19
+Mcu.Pin5=PB15
+Mcu.Pin6=PA8
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
+Mcu.Pin9=PA13
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -104,6 +120,13 @@ PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA8.Signal=S_TIM1_CH1
+PB15.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB15.GPIO_Label=outWire
+PB15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB15.GPIO_PuPd=GPIO_PULLUP
+PB15.Locked=true
+PB15.PinState=GPIO_PIN_SET
+PB15.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
 PB8.Locked=true
@@ -140,7 +163,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -168,8 +191,9 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM_Input_1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-TIM1.ICPolarity_1=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,ICPolarity_1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM1.ICPolarity_1=TIM_INPUTCHANNELPOLARITY_RISING
+TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,ICPolarity_1,AutoReloadPreload
 TIM1.Period=10000
 TIM1.Prescaler=35
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
@@ -184,6 +208,9 @@ TIM2.Prescaler=35
 TIM2.Pulse-PWM\ Generation1\ CH1=1
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
+TIM3.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-Output Compare1 No Output,Prescaler
+TIM3.Prescaler=71
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
@@ -199,10 +226,16 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
 VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
-VP_TIM2_VS_ControllerModeReset.Mode=Reset Mode
-VP_TIM2_VS_ControllerModeReset.Signal=TIM2_VS_ControllerModeReset
+VP_TIM2_VS_ControllerModeTrigger.Mode=Trigger Mode
+VP_TIM2_VS_ControllerModeTrigger.Signal=TIM2_VS_ControllerModeTrigger
 VP_TIM2_VS_OPM.Mode=OPM_bit
 VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_OPM.Mode=OPM_bit
+VP_TIM3_VS_OPM.Signal=TIM3_VS_OPM
+VP_TIM3_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
