--- a/B/App/ds2431.ioc
+++ b/B/App/ds2431.ioc
@@ -2,17 +2,17 @@
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
 Dma.Request2=TIM2_CH1
-Dma.Request3=TIM1_CH1
+Dma.Request3=TIM1_CH2
 Dma.RequestsNb=4
-Dma.TIM1_CH1.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM1_CH1.3.Instance=DMA1_Channel2
-Dma.TIM1_CH1.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM1_CH1.3.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH1.3.Mode=DMA_NORMAL
-Dma.TIM1_CH1.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM1_CH1.3.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM1_CH1.3.Priority=DMA_PRIORITY_LOW
-Dma.TIM1_CH1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM1_CH2.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM1_CH2.3.Instance=DMA1_Channel3
+Dma.TIM1_CH2.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH2.3.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH2.3.Mode=DMA_NORMAL
+Dma.TIM1_CH2.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH2.3.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH2.3.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH2.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.TIM2_CH1.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.TIM2_CH1.2.Instance=DMA1_Channel5
 Dma.TIM2_CH1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -64,16 +64,17 @@ Mcu.Pin10=PA14
 Mcu.Pin11=PB3
 Mcu.Pin12=PB8
 Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM2_VS_ControllerModeTrigger
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin18=VP_TIM2_VS_OPM
-Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM1_VS_ControllerModeReset
+Mcu.Pin15=VP_TIM1_VS_indirect_ch1
+Mcu.Pin16=VP_TIM2_VS_ControllerModeTrigger
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin19=VP_TIM2_VS_OPM
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=VP_TIM3_VS_no_output1
-Mcu.Pin21=VP_TIM3_VS_OPM
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM3_VS_no_output1
+Mcu.Pin22=VP_TIM3_VS_OPM
+Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PB15
@@ -81,14 +82,14 @@ Mcu.Pin6=PA8
 Mcu.Pin7=PA11
 Mcu.Pin8=PA12
 Mcu.Pin9=PA13
-Mcu.PinsNb=23
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -187,13 +188,17 @@ RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM_Input_1
-SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
+SH.S_TIM1_CH1.1=TIM1_CH1,TriggerSource_TI1FP1
+SH.S_TIM1_CH1.ConfNb=2
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM1.ICPolarity_1=TIM_INPUTCHANNELPOLARITY_RISING
-TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,ICPolarity_1,AutoReloadPreload
+TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM1.Channel-Input_Capture2_from_TI1_63=TIM_CHANNEL_2
+TIM1.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM1.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_RISING
+TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,AutoReloadPreload,Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1_63,ICPolarity_CH1,ICPolarity_CH2
 TIM1.Period=10000
 TIM1.Prescaler=35
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
@@ -203,7 +208,7 @@ TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OCPolarity_1,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Pulse-PWM Generation1 CH1,OCMode_PWM-PWM Generation1 CH1,AutoReloadPreload
 TIM2.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM2
 TIM2.OCPolarity_1=TIM_OCPOLARITY_LOW
-TIM2.Period=200
+TIM2.Period=100
 TIM2.Prescaler=35
 TIM2.Pulse-PWM\ Generation1\ CH1=1
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
@@ -220,8 +225,10 @@ USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_ControllerModeReset.Mode=Reset Mode
+VP_TIM1_VS_ControllerModeReset.Signal=TIM1_VS_ControllerModeReset
+VP_TIM1_VS_indirect_ch1.Mode=Input_Capture2_from_TI1_63
+VP_TIM1_VS_indirect_ch1.Signal=TIM1_VS_indirect_ch1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
