шаблон resetpulse + получение длительностей байта в массив

--- a/B/App/ds2431.ioc
+++ b/B/App/ds2431.ioc
@@ -103,6 +103,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_ModeDefaultPP
@@ -199,7 +201,7 @@ TIM1.Channel-Input_Capture2_from_TI1_63=TIM_CHANNEL_2
 TIM1.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM1.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_RISING
 TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,AutoReloadPreload,Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1_63,ICPolarity_CH1,ICPolarity_CH2
-TIM1.Period=10000
+TIM1.Period=9600
 TIM1.Prescaler=35
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
