--- a/B/App/ds2431.ioc
+++ b/B/App/ds2431.ioc
@@ -1,45 +1,25 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=USART2_RX
-Dma.Request1=USART2_TX
-Dma.Request2=TIM2_CH1
-Dma.Request3=TIM1_CH2
-Dma.RequestsNb=4
-Dma.TIM1_CH2.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM1_CH2.3.Instance=DMA1_Channel3
-Dma.TIM1_CH2.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM1_CH2.3.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH2.3.Mode=DMA_NORMAL
-Dma.TIM1_CH2.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM1_CH2.3.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM1_CH2.3.Priority=DMA_PRIORITY_LOW
-Dma.TIM1_CH2.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.TIM2_CH1.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM2_CH1.2.Instance=DMA1_Channel5
-Dma.TIM2_CH1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM2_CH1.2.MemInc=DMA_MINC_ENABLE
-Dma.TIM2_CH1.2.Mode=DMA_NORMAL
-Dma.TIM2_CH1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM2_CH1.2.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM2_CH1.2.Priority=DMA_PRIORITY_LOW
-Dma.TIM2_CH1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.0.Instance=DMA1_Channel6
-Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.0.Mode=DMA_NORMAL
-Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.1.Instance=DMA1_Channel7
-Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.1.Mode=DMA_NORMAL
-Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=TIM2_CH2/CH4
+Dma.Request1=TIM1_UP
+Dma.RequestsNb=2
+Dma.TIM1_UP.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_UP.1.Instance=DMA1_Channel5
+Dma.TIM1_UP.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_UP.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_UP.1.Mode=DMA_NORMAL
+Dma.TIM1_UP.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_UP.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_UP.1.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_UP.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM2_CH2/CH4.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM2_CH2/CH4.0.Instance=DMA1_Channel7
+Dma.TIM2_CH2/CH4.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM2_CH2/CH4.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_CH2/CH4.0.Mode=DMA_NORMAL
+Dma.TIM2_CH2/CH4.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM2_CH2/CH4.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_CH2/CH4.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM2_CH2/CH4.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -52,46 +32,42 @@ Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM2
 Mcu.IP6=TIM3
-Mcu.IP7=USART2
-Mcu.IP8=USB
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=10
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PB3
-Mcu.Pin12=PB8
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM1_VS_ControllerModeReset
-Mcu.Pin15=VP_TIM1_VS_indirect_ch1
-Mcu.Pin16=VP_TIM2_VS_ControllerModeTrigger
+Mcu.Pin10=PB8
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin15=VP_TIM1_VS_OPM
+Mcu.Pin16=VP_TIM2_VS_ControllerModeReset
 Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin19=VP_TIM2_VS_OPM
+Mcu.Pin18=VP_TIM2_VS_indirect_ch1
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM3_VS_no_output1
-Mcu.Pin22=VP_TIM3_VS_OPM
-Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PB15
-Mcu.Pin6=PA8
-Mcu.Pin7=PA11
-Mcu.Pin8=PA12
-Mcu.Pin9=PA13
-Mcu.PinsNb=24
+Mcu.Pin20=VP_TIM3_VS_no_output1
+Mcu.Pin21=VP_TIM3_VS_OPM
+Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin3=PB15
+Mcu.Pin4=PA8
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB3
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -103,12 +79,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_ModeDefaultPP
-PA0-WKUP.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA11.Mode=Device
 PA11.Signal=USB_DM
@@ -118,10 +91,8 @@ PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
+PA8.GPIOParameters=GPIO_ModeDefaultPP
+PA8.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PA8.Signal=S_TIM1_CH1
 PB15.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB15.GPIO_Label=outWire
@@ -166,7 +137,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -190,36 +161,36 @@ RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
-SH.S_TIM1_CH1.1=TIM1_CH1,TriggerSource_TI1FP1
-SH.S_TIM1_CH1.ConfNb=2
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
-SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,TriggerSource_TI1FP1
+SH.S_TIM2_CH1_ETR.1=TIM2_CH1,Input_Capture1_from_TI1
+SH.S_TIM2_CH1_ETR.ConfNb=2
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM1.Channel-Input_Capture2_from_TI1_63=TIM_CHANNEL_2
-TIM1.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM1.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_RISING
-TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,AutoReloadPreload,Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1_63,ICPolarity_CH1,ICPolarity_CH2
-TIM1.Period=9600
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,AutoReloadPreload,Channel-PWM Generation1 CH1,OCMode_PWM-PWM Generation1 CH1,OCIdleState_1,Pulse-PWM Generation1 CH1,OCPolarity_1,OC1Preload_PWM,OCFastMode_PWM-PWM Generation1 CH1
+TIM1.OC1Preload_PWM=DISABLE
+TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
+TIM1.OCIdleState_1=TIM_OCIDLESTATE_SET
+TIM1.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM1
+TIM1.OCPolarity_1=TIM_OCPOLARITY_HIGH
+TIM1.Period=12
 TIM1.Prescaler=35
+TIM1.Pulse-PWM\ Generation1\ CH1=1
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
-TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
-TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OCPolarity_1,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Pulse-PWM Generation1 CH1,OCMode_PWM-PWM Generation1 CH1,AutoReloadPreload
-TIM2.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM2
-TIM2.OCPolarity_1=TIM_OCPOLARITY_LOW
-TIM2.Period=100
+TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM2.Channel-Input_Capture2_from_TI1_63=TIM_CHANNEL_2
+TIM2.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM2.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,AutoReloadPreload,Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1_63,ICPolarity_CH1
+TIM2.Period=9600
 TIM2.Prescaler=35
-TIM2.Pulse-PWM\ Generation1\ CH1=1
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
-TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
+TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM3.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-Output Compare1 No Output,Prescaler
 TIM3.Prescaler=71
-USART2.IPParameters=VirtualMode
-USART2.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_CDC_FS
 USB_DEVICE.PRODUCT_STRING_CDC_FS=DS2431 Emulator
@@ -227,18 +198,20 @@ USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ControllerModeReset.Mode=Reset Mode
-VP_TIM1_VS_ControllerModeReset.Signal=TIM1_VS_ControllerModeReset
-VP_TIM1_VS_indirect_ch1.Mode=Input_Capture2_from_TI1_63
-VP_TIM1_VS_indirect_ch1.Signal=TIM1_VS_indirect_ch1
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM1_VS_ClockSourceITR.Signal=TIM1_VS_ClockSourceITR
+VP_TIM1_VS_ControllerModeTrigger.Mode=Trigger Mode
+VP_TIM1_VS_ControllerModeTrigger.Signal=TIM1_VS_ControllerModeTrigger
+VP_TIM1_VS_OPM.Mode=OPM_bit
+VP_TIM1_VS_OPM.Signal=TIM1_VS_OPM
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
-VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
-VP_TIM2_VS_ControllerModeTrigger.Mode=Trigger Mode
-VP_TIM2_VS_ControllerModeTrigger.Signal=TIM2_VS_ControllerModeTrigger
-VP_TIM2_VS_OPM.Mode=OPM_bit
-VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
+VP_TIM2_VS_ControllerModeReset.Mode=Reset Mode
+VP_TIM2_VS_ControllerModeReset.Signal=TIM2_VS_ControllerModeReset
+VP_TIM2_VS_indirect_ch1.Mode=Input_Capture2_from_TI1_63
+VP_TIM2_VS_indirect_ch1.Signal=TIM2_VS_indirect_ch1
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM3_VS_OPM.Mode=OPM_bit
